# Youtube-Title-Generator-AI

./: README.md
Youtube-Title-Generator-AI/: README.md  appv2.py  index v2.html  main.py  pyproject.toml
Youtube-Title-Generator-AI/(ignore)/: app.py  index (1).html
Youtube-Title-Generator-AI/AITEST/Final_Version(Jupyter)/: DataTraining.ipynb
Youtube-Title-Generator-AI/AllCode/: pyproject.toml
Youtube-Title-Generator-AI/AllCode/Final_Version(Jupyter)/: DataTraining.ipynb  FinalIdeaGenerator.ipynb  GroundTruthTester.ipynb
Youtube-Title-Generator-AI/AllCode/Final_Version(Jupyter)/.ipynb_checkpoints/: GroundTruthTester-checkpoint.ipynb
