[project]
name = "youtube-title-generator-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flash>=1.0.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-api-python-client>=2.195.0",
    "groq>=1.2.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.7",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "xgboost>=3.2.0",
]
