[project]
name = "aitest"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "huggingface-hub==0.27.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "marimo==0.9.14",
    "numpy==1.26.4",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers==3.3.0",
    "transformers==4.47.0",
    "ty>=0.0.31",
    "xgboost==2.0.3",
]

[tool.marimo.display]
default_width = "full"
